; ModuleID = '/home/carl/AnghaBench/macvim/src/extr_dosinst.c_change_main_bat_choice.c'
source_filename = "/home/carl/AnghaBench/macvim/src/extr_dosinst.c_change_main_bat_choice.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64*, i32 }
%struct.TYPE_4__ = type { i32, i32 (i32)*, i32 }

@targets = common dso_local global %struct.TYPE_3__* null, align 8
@NUL = common dso_local global i64 0, align 8
@bat_text_yes = common dso_local global i32 0, align 4
@choices = common dso_local global %struct.TYPE_4__* null, align 8
@bat_text_no = common dso_local global i32 0, align 4
@TARGET_COUNT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @change_main_bat_choice to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @change_main_bat_choice(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = call i32 @change_bat_choice(i32 %4)
  %6 = load %struct.TYPE_3__*, %struct.TYPE_3__** @targets, align 8
  %7 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %6, i64 0
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 0
  %9 = load i64*, i64** %8, align 8
  %10 = getelementptr inbounds i64, i64* %9, i64 0
  %11 = load i64, i64* %10, align 8
  %12 = load i64, i64* @NUL, align 8
  %13 = icmp ne i64 %11, %12
  br i1 %13, label %14, label %21

14:                                               ; preds = %1
  %15 = load i32, i32* @bat_text_yes, align 4
  %16 = load %struct.TYPE_4__*, %struct.TYPE_4__** @choices, align 8
  %17 = load i32, i32* %2, align 4
  %18 = sext i32 %17 to i64
  %19 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %16, i64 %18
  %20 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %19, i32 0, i32 2
  store i32 %15, i32* %20, align 8
  br label %28

21:                                               ; preds = %1
  %22 = load i32, i32* @bat_text_no, align 4
  %23 = load %struct.TYPE_4__*, %struct.TYPE_4__** @choices, align 8
  %24 = load i32, i32* %2, align 4
  %25 = sext i32 %24 to i64
  %26 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %23, i64 %25
  %27 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %26, i32 0, i32 2
  store i32 %22, i32* %27, align 8
  br label %28

28:                                               ; preds = %21, %14
  store i32 1, i32* %3, align 4
  br label %29

29:                                               ; preds = %118, %28
  %30 = load i32, i32* %3, align 4
  %31 = load i32, i32* @TARGET_COUNT, align 4
  %32 = icmp slt i32 %30, %31
  br i1 %32, label %33, label %121

33:                                               ; preds = %29
  %34 = load %struct.TYPE_3__*, %struct.TYPE_3__** @targets, align 8
  %35 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %34, i64 0
  %36 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %35, i32 0, i32 0
  %37 = load i64*, i64** %36, align 8
  %38 = getelementptr inbounds i64, i64* %37, i64 0
  %39 = load i64, i64* %38, align 8
  %40 = load i64, i64* @NUL, align 8
  %41 = icmp ne i64 %39, %40
  br i1 %41, label %42, label %109

42:                                               ; preds = %33
  %43 = load %struct.TYPE_4__*, %struct.TYPE_4__** @choices, align 8
  %44 = load i32, i32* %2, align 4
  %45 = load i32, i32* %3, align 4
  %46 = add nsw i32 %44, %45
  %47 = sext i32 %46 to i64
  %48 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %43, i64 %47
  %49 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %48, i32 0, i32 1
  %50 = load i32 (i32)*, i32 (i32)** %49, align 8
  %51 = icmp ne i32 (i32)* %50, null
  br i1 %51, label %52, label %109

52:                                               ; preds = %42
  %53 = load %struct.TYPE_4__*, %struct.TYPE_4__** @choices, align 8
  %54 = load i32, i32* %2, align 4
  %55 = load i32, i32* %3, align 4
  %56 = add nsw i32 %54, %55
  %57 = sext i32 %56 to i64
  %58 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %53, i64 %57
  %59 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %58, i32 0, i32 0
  store i32 1, i32* %59, align 8
  %60 = load %struct.TYPE_4__*, %struct.TYPE_4__** @choices, align 8
  %61 = load i32, i32* %2, align 4
  %62 = load i32, i32* %3, align 4
  %63 = add nsw i32 %61, %62
  %64 = sext i32 %63 to i64
  %65 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %60, i64 %64
  %66 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %65, i32 0, i32 1
  %67 = load i32 (i32)*, i32 (i32)** %66, align 8
  %68 = icmp eq i32 (i32)* %67, @change_bat_choice
  br i1 %68, label %69, label %108

69:                                               ; preds = %52
  %70 = load %struct.TYPE_3__*, %struct.TYPE_3__** @targets, align 8
  %71 = load i32, i32* %3, align 4
  %72 = sext i32 %71 to i64
  %73 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %70, i64 %72
  %74 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %73, i32 0, i32 0
  %75 = load i64*, i64** %74, align 8
  %76 = getelementptr inbounds i64, i64* %75, i64 0
  %77 = load i64, i64* %76, align 8
  %78 = load i64, i64* @NUL, align 8
  %79 = icmp ne i64 %77, %78
  br i1 %79, label %80, label %108

80:                                               ; preds = %69
  %81 = load %struct.TYPE_3__*, %struct.TYPE_3__** @targets, align 8
  %82 = load i32, i32* %3, align 4
  %83 = sext i32 %82 to i64
  %84 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %81, i64 %83
  %85 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %84, i32 0, i32 0
  %86 = load i64*, i64** %85, align 8
  %87 = load %struct.TYPE_3__*, %struct.TYPE_3__** @targets, align 8
  %88 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %87, i64 0
  %89 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %88, i32 0, i32 0
  %90 = load i64*, i64** %89, align 8
  %91 = call i32 @strcpy(i64* %86, i64* %90)
  %92 = load i32, i32* %2, align 4
  %93 = load i32, i32* %3, align 4
  %94 = add nsw i32 %92, %93
  %95 = load %struct.TYPE_3__*, %struct.TYPE_3__** @targets, align 8
  %96 = load i32, i32* %3, align 4
  %97 = sext i32 %96 to i64
  %98 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %95, i64 %97
  %99 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %98, i32 0, i32 0
  %100 = load i64*, i64** %99, align 8
  %101 = load %struct.TYPE_3__*, %struct.TYPE_3__** @targets, align 8
  %102 = load i32, i32* %3, align 4
  %103 = sext i32 %102 to i64
  %104 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %101, i64 %103
  %105 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %104, i32 0, i32 1
  %106 = load i32, i32* %105, align 8
  %107 = call i32 @set_bat_text(i32 %94, i64* %100, i32 %106)
  br label %108

108:                                              ; preds = %80, %69, %52
  br label %117

109:                                              ; preds = %42, %33
  %110 = load %struct.TYPE_4__*, %struct.TYPE_4__** @choices, align 8
  %111 = load i32, i32* %2, align 4
  %112 = load i32, i32* %3, align 4
  %113 = add nsw i32 %111, %112
  %114 = sext i32 %113 to i64
  %115 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %110, i64 %114
  %116 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %115, i32 0, i32 0
  store i32 0, i32* %116, align 8
  br label %117

117:                                              ; preds = %109, %108
  br label %118

118:                                              ; preds = %117
  %119 = load i32, i32* %3, align 4
  %120 = add nsw i32 %119, 1
  store i32 %120, i32* %3, align 4
  br label %29

121:                                              ; preds = %29
  ret void
}

declare dso_local i32 @change_bat_choice(i32) #1

declare dso_local i32 @strcpy(i64*, i64*) #1

declare dso_local i32 @set_bat_text(i32, i64*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
